# iff_rs

./: .gitignore  Cargo.toml  LICENSE  README.md
examples/: Amiga fallout.iff  harrison.iff
src/: chunk.rs  error.rs  iff.rs  lib.rs
tests/: tests.rs
